[UX] The arithmetic expression dialog now doesn't remove focus on the textbox when selecting a variable or a function. It also does not allow to save the expression when it isn't correct. Now variables and functions can be added to the expression via left-click, instead of by double-click. [UX] When modifying a network, it's panel tab name gets reloaded. This allows not only to update the network when saving changes, but also to modify the ProbNet's name. Other bugs from the old MDI implementation have been avoided in this Tab implementation, such having two tabs with the same name (which was possible with MDI). [Feature] Added ReferenceExpression and VariableExpression instead of resorting to Strings, as the contents of a String need to be manually changed (This is part of allowing expressions in potentials such as AugmentedProbTablePotential to be updated when variable's name changes). [Feature, Development] Added a class named ExtensionTree that gives all the classes extended by a target class (recursively). This is meant for development purposes, but it is also helpful to use it in production scenarios where classes extending T need to be traversed in extension order (PotentialPanelManager requires exactly this feature). [Feature, Development] PluginSearch now can return an ExtensionTree. [Refactor] PluginLoader now returns Class<? extends T> instead of Class<T> to allow more expressiveness. This has been reflected in classes who used it (most of them are 'Manager' classes). [Refactor] PotentialManager has been overly simplified, and now it's only a class called PotentialUtils. Corrected bad customs such as accessing potentials by raw Strings rather than Class<? extends Potential> or Potential. The same changes have happened to PotentialPanelManager, but it remains as an Instantiable class (although it is accessed by a Singleton). [Refactor] ProbNetReader has been simplified, and now it always takes a File as a parameter (accepting URIs as well). [Refactor] Pote